# angie

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.rst
cmake/: LoadLibs.cmake  includes.cmake
res/shaders/: basic.frag  basic.vert  colours.frag  colours.vert  fragment.glsl  light.frag  light.vert  texture.vert  vertex.glsl
src/: CMakeLists.txt  Utils.hh  application.cc  application.cpp  application.h  application.hh  camera.cc  camera.hh  cameracontroller.hh  indexbuffer.cc  indexbuffer.hh  main.cc  main.cpp  mesh.hh  render.cc  render.hh  renderer.cc  renderer.hh  shader.cc  shader.hh  texture.cc  texture.hh  utils.hh  vertexarray.cc  vertexarray.hh  vertexattributes.cc  vertexattributes.hh  vertexbuffer.cc  vertexbuffer.hh  window.cc  window.cpp  window.hh
src/camera/: camera.cc  camera.cpp  camera.h  camera.hh  cameracontroller.cc  cameracontroller.cpp  cameracontroller.h  cameracontroller.hh
src/graphics/: CMakeLists.txt  indexbuffer.cpp  indexbuffer.h  mesh.cc  mesh.cpp  mesh.h  renderer.cc  renderer.cpp  renderer.h  renderer.hh  shader.cc  shader.cpp  shader.hh  texture.cc  texture.cpp  texture.h  vertexarray.cpp  vertexarray.h  vertexarray.hh  vertexbuffer.cc  vertexbuffer.cpp  vertexbuffer.h
